--- a/style.css
+++ b/style.css
@@ -1,96 +1,126 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap');
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+/* RESET CSS */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: "Inter";
+}
 
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+ul, ol {
+    list-style-type: none;
 }
 
 a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-#app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.vanilla:hover {
-  filter: drop-shadow(0 0 2em #f7df1eaa);
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+    text-decoration: none;
 }
 
 button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+    cursor: pointer;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+html {
+    width: 100%;
+    height: 100%;;
+}
+
+/* VARIABLES */
+:root {
+    /* COLORS */
+    --mgc-color-000: white;
+    --mgc-color-025: #cdcdcd;
+    --mgc-color-050: grey;
+    --mgc-color-100: black;
+  
+    --mgc-color-white: var(--mgc-color-000);
+    --mgc-color-light-grey: var(--mgc-color-025);
+    --mgc-color-grey: var(--mgc-color-050);
+    --mgc-color-black: var(--mgc-color-100);
+  
+    /* SPACINGS */
+    --mgc-margin-xs: 10px;
+    --mgc-margin-s: 20px;
+    --mgc-margin-m: 30px;
+    --mgc-margin-l: 40px;
+    --mgc-margin-xl: 50px;
+    --mgc-margin-xxl: 80px;
+  
+    --mgc-padding-xs: 10px;
+    --mgc-padding-s: 20px;
+    --mgc-padding-m: 30px;
+    --mgc-padding-l: 40px;
+    --mgc-padding-xl: 50px;
+  
+    --mgc-gap-xs: 10px;
+    --mgc-gap-s: 20px;
+    --mgc-gap-m: 30px;
+    --mgc-gap-l: 40px;
+    --mgc-gap-xl: 50px;  
+  
+    /* FONT SIZES */
+    --mgc-font-size-xxs: 0.6rem;
+    --mgc-font-size-xs: 0.7rem;
+    --mgc-font-size-s: 0.9rem;
+    --mgc-font-size-m: 1.5rem;
+    --mgc-font-size-l: 2rem;
+    --mgc-font-size-xl: 3rem;
+    --mgc-font-size-xxl: 4rem;
+  
+    /* RADIUS */
+    --mgc-border-radius-s: 2px;
+    --mgc-border-radius-m: 5px;
+    --mgc-border-radius-l: 10px;
+    --mgc-border-radius-xl: 50px;
+  
+}
+
+.flex-container {
+    display: flex;
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+}
+
+.flex-container-column {
+    display: flex;
+    width: 100%;
+    height: 100%;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+#app {
+    width: 100%;    
+    min-height: 100svh;
+}
+
+header {
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    padding: var(--mgc-padding-m) var(--mgc-padding-s);
+}
+
+main{
+    padding: var(--mgc-padding-l);
+    min-height: 90svh;
+}
+
+.grid-container {
+    display: grid;
+    grid-template-rows: repeat(auto-fit, minmax(100px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    width: 100%;
+    height: 50%;
+    gap: var(--mgc-gap-s);
+}
+
+.grid-container > img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: var(--mgc-border-radius-l);
 }
